--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <iframe style="display: none" id="sandboxFrame"></iframe>
     <div id="root"></div>
     <!--
       This HTML file is a template.
